--- a/src/components/Campaigns/Campaigns.scss
+++ b/src/components/Campaigns/Campaigns.scss
@@ -1,4 +1,3 @@
-
 .Campaigns{
     width: 80%;
     margin: auto;
@@ -59,6 +58,7 @@
     margin: auto;
     padding: 30px;
     overflow-x: scroll;
+    scrollbar-width: none;
 
     @media(max-width: 767px){
         margin-right: 10px;
